python/storage-demo/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage-demo-ingress
  namespace: storage-demo
spec:
  podSelector:
    matchLabels:
      app: storage-demo

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8000
